Bug 1377950 - Stub in a function for resetting all compositors with GPUProcessManager. r=jrmuizel

MozReview-Commit-ID: HsKCGli3TOM

--HG--
extra : rebase_source : 60a06588747feeb6d3ed0543c38715adea89957d